# Helix.app

./: .env  .gitignore  Helix.spec  README.md  Run Helix Desktop.bat  _sandbox_safe.py  ai_helper.py  ai_stub.py  app.py  check_imports.py  code_tree.txt  codon.py  crisprutils.py  editor.py  helix.db  io_utils.py  make_icon.py  mobile_api.py  motifs.py  msa_utils.py  nixpacks.toml  peptidebuilder.py  primer.py  progress.json  protein_tools.py  pyproject.toml  quiecktest.py  railway.json  requierements  requirements.txt  sonify.py  structure_viewer.py  stylekit.py  test.py  test_client.py  variants.py  visuals.py
.claude/: settings.local.json
api/: db.py  main.py
api/routes/: ai.py  base_editor.py  export.py  genes.py  grnas.py  offtarget.py  orfs.py  outcome.py  pdb.py  primers.py  protein.py  scoring.py  sequences.py  session.py  variants.py
components/: session.py  sidebar.py.tmp.13736.1777373956739  sidebar.py.tmp.13736.1777374486177
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  api.js  index.css  store.jsx
helix_api/: cli.py  main.py
helix_apps/crispr_sandbox/: app_api.py  services.py
helix_apps/med_prep/: app_api.py  streamlit_ui.py
helix_core/: __init__.py  _proxy.py  ai_stub.py  animations.py  auth.py  codon.py  crisprutils.py  db.py  editor.py  export_state.py  io_utils.py  motifs.py  msa_utils.py  offtarget.py  peptidebuilder.py  primer.py  progression.py  protein_tools.py  quiecktest.py  req  scorer.pkl  scoring_model.py  screen_analysis.py  screen_design.py  sonify.py  storage.py  structure_viewer.py  test.py  variants.py  visuals.py
helix_desktop/: desktop_launcher.py  launcher.py  launcher_gui.py  router.py  stylekit.py  theme.py  ui.py  ui_plus.py
helix_platform/: plugins.py  storage.py
mobile_app/: main.py
mobile_app/core/: crispr_engine.py
scripts/: download_libraries.py  download_real_data.py  train_on_doench.py  train_real_scorer.py  train_scorer.py
streamlit/: config.toml
tests/: test_auth.py  test_db.py  test_mobile_api.py
(+29 files in other folders)
